--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -12,10 +12,20 @@
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label class="action-bar-title" text="Featured"></Label>
+    <Label class="action-bar-title" text="IsThisBlackOwned"></Label>
 </ActionBar>
+<ScrollView sdkExampleTitle sdkToggleNavButton>
+    <!-- >> camera-module-html -->
+    <FlexboxLayout flexDirection="column-reverse">
+        <Image [src]="imageTaken" flexGrow="3" class="p-15 img-rounded"></Image>
+        <Button text="Take Photo" class="btn btn-primary btn-active" (tap)="onTakePhoto()" flexGrow="1"></Button>
+        <Button text="Request permissions" class="btn btn-primary btn-active" (tap)="onRequestPermissions()" flexGrow="1"></Button>
+    </FlexboxLayout>
+    <!-- << camera-module-html -->
+</ScrollView>
+
 
 <GridLayout class="page page-content">
     <Label class="page-icon fa" text="&#xf005;"></Label>
-    <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
+    <Label class="page-placeholder" text="Camera should ask for permisson and work"></Label>
 </GridLayout>
