--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -14,18 +14,36 @@
     </ActionItem>
     <Label class="action-bar-title" text="IsThisBlackOwned"></Label>
 </ActionBar>
-<ScrollView sdkExampleTitle sdkToggleNavButton>
-    <!-- >> camera-module-html -->
-    <FlexboxLayout flexDirection="column-reverse">
-        <Image [src]="imageTaken" flexGrow="3" class="p-15 img-rounded"></Image>
-        <Button text="Take Photo" class="btn btn-primary btn-active" (tap)="onTakePhoto()" flexGrow="1"></Button>
-        <Button text="Request permissions" class="btn btn-primary btn-active" (tap)="onRequestPermissions()" flexGrow="1"></Button>
-    </FlexboxLayout>
-    <!-- << camera-module-html -->
-</ScrollView>
-
-
+<!-- 
 <GridLayout class="page page-content">
     <Label class="page-icon fa" text="&#xf005;"></Label>
     <Label class="page-placeholder" text="Camera should ask for permisson and work"></Label>
-</GridLayout>
+</GridLayout> -->
+<ScrollView>
+    <GridLayout rows="auto, *, auto, auto">
+        <StackLayout row="0" orientation="vertical" padding="10">
+            <StackLayout orientation="horizontal" padding="10">
+                <Label text="saveToGallery"></Label>
+                <Switch [(ngModel)]="saveToGallery"></Switch>
+            </StackLayout>
+            <StackLayout android:visibility="collapsed" orientation="horizontal" padding="10">
+                <Label text="allowsEditing"></Label>
+                <Switch [(ngModel)]="allowsEditing"></Switch>
+            </StackLayout>
+            <StackLayout orientation="horizontal" padding="10">
+                <Label text="keepAspectRatio"></Label>
+                <Switch [(ngModel)]="keepAspectRatio"></Switch>
+            </StackLayout>
+            <StackLayout orientation="horizontal" padding="10">
+                <Label text="width: "></Label>
+                <TextField hint="Enter width" keyboardType="number" [(ngModel)]="width" class="input"></TextField>
+                <Label text="height: "></Label>
+                <TextField hint="Enter height" keyboardType="number" [(ngModel)]="height" class="input"></TextField>
+            </StackLayout>
+        </StackLayout>
+
+        <Image row="1" [src]="cameraImage" stretch="aspectFit" margin="10"></Image>
+        <TextView row="2" [(ngModel)]="labelText" editable="false"></TextView>>
+        <Button row="3" text="Take Picture" (tap)='onTakePictureTap($event)' padding="10"></Button>
+    </GridLayout>
+</ScrollView>
