--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -26,7 +26,7 @@
                 <Label text="saveToGallery"></Label>
                 <Switch [(ngModel)]="saveToGallery"></Switch>
             </StackLayout>
-            <StackLayout android:visibility="collapsed" orientation="horizontal" padding="10">
+            <!-- <StackLayout android:visibility="collapsed" orientation="horizontal" padding="10">
                 <Label text="allowsEditing"></Label>
                 <Switch [(ngModel)]="allowsEditing"></Switch>
             </StackLayout>
@@ -39,11 +39,11 @@
                 <TextField hint="Enter width" keyboardType="number" [(ngModel)]="width" class="input"></TextField>
                 <Label text="height: "></Label>
                 <TextField hint="Enter height" keyboardType="number" [(ngModel)]="height" class="input"></TextField>
-            </StackLayout>
+            </StackLayout> -->
         </StackLayout>
 
         <Image row="1" [src]="cameraImage" stretch="aspectFit" margin="10"></Image>
         <TextView row="2" [(ngModel)]="labelText" editable="false"></TextView>>
-        <Button row="3" text="Take Picture" (tap)='onTakePictureTap($event)' padding="10"></Button>
+        <Button row="3" text="Upload Picture" (tap)='onTakePictureTap($event)' padding="10"></Button>
     </GridLayout>
 </ScrollView>
